# FoodVision_Big

./: .gitignore  main.py  pyproject.toml
configs/: nonfood_classes.txt
demos/: app.py
func/: data_setup.py  engine.py  get_data.py  model_setup.py  utils.py  visuals.py
notebooks/: Food type classifier prep.ipynb
